--- a/ecommerce/WebApplication1/packages.config
+++ b/ecommerce/WebApplication1/packages.config
@@ -10,4 +10,5 @@
   <package id="Microsoft.TypeScript.MSBuild" version="5.6.2" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="SweetAlert" version="1.0.0" targetFramework="net472" />
 </packages>
