--- a/ecommerce/WebApplication1/Web.config
+++ b/ecommerce/WebApplication1/Web.config
@@ -4,6 +4,7 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+	
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -18,8 +19,11 @@
     <add name="DataContext" connectionString="Server=localhost\SQLEXPRESS;Database=ecommerce;Trusted_Connection=True;integrated security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+	  <caching>
+		  <outputCache enableOutputCache="false" />
+	  </caching>
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="20000" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
