--- a/ecommerce/WebApplication1/packages.config
+++ b/ecommerce/WebApplication1/packages.config
@@ -9,6 +9,8 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.TypeScript.MSBuild" version="5.6.2" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="SweetAlert" version="1.0.0" targetFramework="net472" />
 </packages>
