--- a/ecommerce/WebApplication1/ecommerce.csproj
+++ b/ecommerce/WebApplication1/ecommerce.csproj
@@ -117,6 +117,92 @@
     <Content Include="Content\sweetalert\docs.css" />
     <Content Include="Content\sweetalert\sweet-alert.css" />
     <Content Include="Content\sweetalert\thumbs-up.jpg" />
+    <Content Include="eshop\404.html" />
+    <Content Include="eshop\blog-single.html" />
+    <Content Include="eshop\blog.html" />
+    <Content Include="eshop\cart.html" />
+    <Content Include="eshop\checkout.html" />
+    <Content Include="eshop\contact-us.html" />
+    <Content Include="eshop\css\animate.css" />
+    <Content Include="eshop\css\bootstrap.min.css" />
+    <Content Include="eshop\css\font-awesome.min.css" />
+    <Content Include="eshop\css\main.css" />
+    <Content Include="eshop\css\prettyPhoto.css" />
+    <Content Include="eshop\css\price-range.css" />
+    <Content Include="eshop\css\responsive.css" />
+    <Content Include="eshop\fonts\fontawesome-webfont.svg" />
+    <Content Include="eshop\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="eshop\images\404\404.png" />
+    <Content Include="eshop\images\blog\blog-one.jpg" />
+    <Content Include="eshop\images\blog\blog-three.jpg" />
+    <Content Include="eshop\images\blog\blog-two.jpg" />
+    <Content Include="eshop\images\blog\man-four.jpg" />
+    <Content Include="eshop\images\blog\man-one.jpg" />
+    <Content Include="eshop\images\blog\man-three.jpg" />
+    <Content Include="eshop\images\blog\man-two.jpg" />
+    <Content Include="eshop\images\blog\socials.png" />
+    <Content Include="eshop\images\cart\one.png" />
+    <Content Include="eshop\images\cart\three.png" />
+    <Content Include="eshop\images\cart\two.png" />
+    <Content Include="eshop\images\home\bg_border.png" />
+    <Content Include="eshop\images\home\gallery1.jpg" />
+    <Content Include="eshop\images\home\gallery2.jpg" />
+    <Content Include="eshop\images\home\gallery3.jpg" />
+    <Content Include="eshop\images\home\gallery4.jpg" />
+    <Content Include="eshop\images\home\girl1.jpg" />
+    <Content Include="eshop\images\home\girl2.jpg" />
+    <Content Include="eshop\images\home\girl3.jpg" />
+    <Content Include="eshop\images\home\iframe1.png" />
+    <Content Include="eshop\images\home\iframe2.png" />
+    <Content Include="eshop\images\home\iframe3.png" />
+    <Content Include="eshop\images\home\iframe4.png" />
+    <Content Include="eshop\images\home\logo.png" />
+    <Content Include="eshop\images\home\map.png" />
+    <Content Include="eshop\images\home\new.png" />
+    <Content Include="eshop\images\home\partner1.png" />
+    <Content Include="eshop\images\home\partner2.png" />
+    <Content Include="eshop\images\home\partner3.png" />
+    <Content Include="eshop\images\home\partner4.png" />
+    <Content Include="eshop\images\home\pricing.png" />
+    <Content Include="eshop\images\home\product1.jpg" />
+    <Content Include="eshop\images\home\product2.jpg" />
+    <Content Include="eshop\images\home\product3.jpg" />
+    <Content Include="eshop\images\home\product4.jpg" />
+    <Content Include="eshop\images\home\product5.jpg" />
+    <Content Include="eshop\images\home\product6.jpg" />
+    <Content Include="eshop\images\home\recommend1.jpg" />
+    <Content Include="eshop\images\home\recommend2.jpg" />
+    <Content Include="eshop\images\home\recommend3.jpg" />
+    <Content Include="eshop\images\home\sale.png" />
+    <Content Include="eshop\images\home\searchicon.png" />
+    <Content Include="eshop\images\home\shipping.jpg" />
+    <Content Include="eshop\images\product-details\1.jpg" />
+    <Content Include="eshop\images\product-details\new.jpg" />
+    <Content Include="eshop\images\product-details\rating.png" />
+    <Content Include="eshop\images\product-details\share.png" />
+    <Content Include="eshop\images\product-details\similar1.jpg" />
+    <Content Include="eshop\images\product-details\similar2.jpg" />
+    <Content Include="eshop\images\product-details\similar3.jpg" />
+    <Content Include="eshop\images\shop\advertisement.jpg" />
+    <Content Include="eshop\images\shop\product10.jpg" />
+    <Content Include="eshop\images\shop\product11.jpg" />
+    <Content Include="eshop\images\shop\product12.jpg" />
+    <Content Include="eshop\images\shop\product7.jpg" />
+    <Content Include="eshop\images\shop\product8.jpg" />
+    <Content Include="eshop\images\shop\product9.jpg" />
+    <Content Include="eshop\index.html" />
+    <Content Include="eshop\js\bootstrap.min.js" />
+    <Content Include="eshop\js\contact.js" />
+    <Content Include="eshop\js\gmaps.js" />
+    <Content Include="eshop\js\html5shiv.js" />
+    <Content Include="eshop\js\jquery.js" />
+    <Content Include="eshop\js\jquery.prettyPhoto.js" />
+    <Content Include="eshop\js\jquery.scrollUp.min.js" />
+    <Content Include="eshop\js\main.js" />
+    <Content Include="eshop\js\price-range.js" />
+    <Content Include="eshop\login.html" />
+    <Content Include="eshop\product-details.html" />
+    <Content Include="eshop\shop.html" />
     <Content Include="Global.asax" />
     <Content Include="NiceAdmin\assets\css\style.css" />
     <Content Include="NiceAdmin\assets\img\apple-touch-icon.png" />
@@ -477,6 +563,10 @@
     <Content Include="Content\sweetalert\sweet-alert-animations.less" />
     <Content Include="Content\bootstrap\variables.less" />
     <Content Include="Content\bootstrap\mixins.less" />
+    <Content Include="eshop\fonts\fontawesome-webfont.woff" />
+    <Content Include="eshop\fonts\FontAwesome.otf" />
+    <Content Include="eshop\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="eshop\sendemail.php" />
     <None Include="Scripts\jquery-3.0.0-vsdoc.js" />
     <Content Include="Scripts\jquery-3.0.0.js" />
     <Content Include="Scripts\jquery-3.0.0.min.js" />
@@ -560,6 +650,9 @@
     <Compile Include="Controllers\AdminCategoryController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AdminProductController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\SweetController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -691,6 +784,12 @@
     <Content Include="Views\AdminProduct\Index.cshtml" />
     <Content Include="Views\AdminProduct\Create.cshtml" />
     <Content Include="Views\AdminProduct\Update.cshtml" />
+    <Content Include="Views\Shared\Layout.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Category\CategoryList.cshtml" />
+    <Content Include="Views\Category\Details.cshtml" />
+    <Content Include="Views\Product\Details.cshtml" />
+    <Content Include="Views\Product\PopularProduct.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
