--- a/ecommerce/WebApplication1/ecommerce.csproj
+++ b/ecommerce/WebApplication1/ecommerce.csproj
@@ -647,6 +647,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminCategoryController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AdminProductController.cs" />
@@ -790,6 +791,7 @@
     <Content Include="Views\Category\Details.cshtml" />
     <Content Include="Views\Product\Details.cshtml" />
     <Content Include="Views\Product\PopularProduct.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
