--- a/ecommerce/WebApplication1/Web.config
+++ b/ecommerce/WebApplication1/Web.config
@@ -24,6 +24,9 @@
 	  </caching>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" maxRequestLength="20000" />
+	<authentication mode="Forms">
+		<forms loginUrl="/Account/Login/" timeout="3"></forms>
+	</authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
