--- a/ecommerce/DataAccessLayer/DataAccessLayer.csproj
+++ b/ecommerce/DataAccessLayer/DataAccessLayer.csproj
@@ -53,6 +53,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\DataContext.cs" />
+    <Compile Include="Migrations\202410242147360_Products.cs" />
+    <Compile Include="Migrations\202410242147360_Products.Designer.cs">
+      <DependentUpon>202410242147360_Products.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -65,6 +69,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202410242147360_Products.resx">
+      <DependentUpon>202410242147360_Products.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
