--- a/ecommerce/EntityLayer/EntityLayer.csproj
+++ b/ecommerce/EntityLayer/EntityLayer.csproj
@@ -56,6 +56,8 @@
   <ItemGroup>
     <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\Category.cs" />
+    <Compile Include="Entities\Comment.cs" />
+    <Compile Include="Entities\FeaturedProducts.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\Sales.cs" />
     <Compile Include="Entities\User.cs" />
