--- a/ecommerce/WebApplication1/Web.config
+++ b/ecommerce/WebApplication1/Web.config
@@ -27,6 +27,11 @@
 	<authentication mode="Forms">
 		<forms loginUrl="/Account/Login/" timeout="3"></forms>
 	</authentication>
+	<roleManager enabled="true" defaultProvider="testRoleProvider">
+		<providers>
+			<add name="testRoleProvider" type="WebApplication1.Roles.AdminRoleProvider"/>
+		</providers>
+	</roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
