--- a/ecommerce/BusinessLayer/BusinessLayer.csproj
+++ b/ecommerce/BusinessLayer/BusinessLayer.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Abstract\GenericRepository.cs" />
     <Compile Include="Abstract\IRepository.cs" />
+    <Compile Include="Concrete\FeaturedProductRepository.cs" />
     <Compile Include="Concrete\ProductRepository.cs" />
     <Compile Include="Concrete\CategoryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
