--- a/ecommerce/WebApplication1/ecommerce.csproj
+++ b/ecommerce/WebApplication1/ecommerce.csproj
@@ -655,7 +655,7 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
-    <Compile Include="Controllers\ProductStockController.cs" />
+    <Compile Include="Controllers\AdminProductStockController.cs" />
     <Compile Include="Controllers\SweetController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -797,6 +797,7 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\AdminFeatured\Index.cshtml" />
     <Content Include="Views\Admin\Comment.cshtml" />
+    <Content Include="Views\AdminProductStock\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -807,7 +808,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\ProductStock\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj">
